# gppcc16

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/: game.json  map.json  res.json
assets/entities/: boxer.ent  camera.ent  enemy.ent  fader.ent  player.ent  winfader.ent
assets/spr/: boxring.spr  gameover.spr  player_block.spr  player_die.spr  player_duck.spr  player_punch.spr  player_sidestep.spr  player_stagger.spr  player_stand.spr  player_win.spr  unknown.spr  win.spr
extlib/: CMakeLists.txt
src/gppcc16/: BoxerAI.cpp  BoxerAI.hpp  BoxerController.cpp  BoxerController.hpp  CMakeLists.txt  EnduranceComponent.cpp  EnduranceComponent.hpp  Fader.cpp  Fader.hpp  GameEvents.cpp  GameEvents.hpp  Gui.cpp  Gui.hpp  HealthComponent.cpp  HealthComponent.hpp  HealthEvents.cpp  HealthEvents.hpp  Logic.cpp  Logic.hpp  TargetComponent.cpp  TargetComponent.hpp  main.cpp  todo.md
test/: CMakeLists.txt
